--- a/src/index.css
+++ b/src/index.css
@@ -1,30 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Condiment);
 
-body  {background-image: URL(https://images.unsplash.com/photo-1514516870926-20598973e480?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=986&q=80);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-h1{
-  text-align: center;
-  font-size :70px;
-  font-family: "SimHei";
-  font-style: italic;
-  font-weight: bold;
-  line-height:5;
-  color:black;
-  font-family: Condiment, cursive;
-  font-size: 60px;
-  text-align: center;
-  
-}
-h2{text-align: center;
-  font-size :100px;
-  font-family: "Abril Fatface";
-  font-style: Regular;
-  font-weight: bold;
-  line-height:0;
-  color:black;
-}
-                               
